...
              backgroundColor: "transparent",
              borderRadius: 12,
            }}
            contentStyle={{ height: "100%" }}
          >
            <Text className="font-bold text-xl text-center w-full text-white">
              Sign In
            </Text>
          </Button>
        </View>
        <View className="w-full rounded-xl shadow-md h-16 bg-[#38a3a5] flex justify-center items-center">
          <Button
            mode="contained"
...
              backgroundColor: "transparent",
              borderRadius: 12,
            }}
            contentStyle={{ height: "100%" }}
          >
            <Text className="font-bold text-xl text-center w-full text-white">
              Sign Up
            </Text>
          </Button>
        </View>
      </View>
    </View>
  );
...
